syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "MTAMailTransferProto";

package com.sourceforgery.tachikoma.mta;

import "google/protobuf/empty.proto";


service MTAEmailQueue {
    rpc getEmails(google.protobuf.Empty) returns (stream EmailMessage);
    rpc emailMTAQueued(MTAQueuedNotification) returns (google.protobuf.Empty);
    rpc incomingEmail(IncomingEmailMessage) returns (google.protobuf.Empty);
}

message EmailMessage {
    repeated string emailAddresses = 1;
    string body = 2;
}

message IncomingEmailMessage {
    string emailAddress = 1;
    string body = 2;
}

message MTAQueuedNotification {
    string messageId = 1;
}