syntax = "proto3";

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

package com.sourceforgery.tachikoma.mq;

// All messages that can be queued/broadcasted to the MQ
message IncomingEmailNotificationMessage {
    google.protobuf.Timestamp creation_timestamp = 101;
    sint64 incoming_email_message_id = 102;
}
